add group network and branch pages

--- a/branch.html
+++ b/branch.html
@@ -146,52 +146,52 @@
                     <p class="f-12 c-grey f-med">Search by state, area, name...</p>
                     <div class="resources mt-3 bg-white">
                         <li class="list-unstyled mt-2">
-                            <a class="f-16 f-med" href='/'>Messages (video)</a>
+                            <a class="f-16 f-med" href=''>Messages (video)</a>
                             <br />
                             <span class="c-grey f-12 f-med">250 different types</span>
                         </li>
                         <li class="list-unstyled mt-2">
-                            <a class="f-16 f-med" href='/'>Messages (video)</a>
+                            <a class="f-16 f-med" href=''>Messages (video)</a>
                             <br />
                             <span class="c-grey f-12 f-med">250 different types</span>
                         </li>
                         <li class="list-unstyled mt-2">
-                            <a class="f-16 f-med" href='/'>Messages (video)</a>
+                            <a class="f-16 f-med" href=''>Messages (video)</a>
                             <br />
                             <span class="c-grey f-12 f-med">250 different types</span>
                         </li>
                         <li class="list-unstyled mt-2">
-                            <a class="f-16 f-med" href='/'>Messages (video)</a>
+                            <a class="f-16 f-med" href=''>Messages (video)</a>
                             <br />
                             <span class="c-grey f-12 f-med">250 different types</span>
                         </li>
                         <li class="list-unstyled mt-2">
-                            <a class="f-16 f-med" href='/'>Messages (video)</a>
+                            <a class="f-16 f-med" href=''>Messages (video)</a>
                             <br />
                             <span class="c-grey f-12 f-med">250 different types</span>
                         </li>
                         <li class="list-unstyled mt-2">
-                            <a class="f-16 f-med" href='/'>Messages (video)</a>
+                            <a class="f-16 f-med" href=''>Messages (video)</a>
                             <br />
                             <span class="c-grey f-12 f-med">250 different types</span>
                         </li>
                         <li class="list-unstyled mt-2">
-                            <a class="f-16 f-med" href='/'>Messages (video)</a>
+                            <a class="f-16 f-med" href=''>Messages (video)</a>
                             <br />
                             <span class="c-grey f-12 f-med">250 different types</span>
                         </li>
                         <li class="list-unstyled mt-2">
-                            <a class="f-16 f-med" href='/'>Messages (video)</a>
+                            <a class="f-16 f-med" href=''>Messages (video)</a>
                             <br />
                             <span class="c-grey f-12 f-med">250 different types</span>
                         </li>
                         <li class="list-unstyled mt-2">
-                            <a class="f-16 f-med" href='/'>Messages (video)</a>
+                            <a class="f-16 f-med" href=''>Messages (video)</a>
                             <br />
                             <span class="c-grey f-12 f-med">250 different types</span>
                         </li>
                         <li class="list-unstyled mt-2">
-                            <a class="f-16 f-med" href='/'>Messages (video)</a>
+                            <a class="f-16 f-med" href=''>Messages (video)</a>
                             <br />
                             <span class="c-grey f-12 f-med">250 different types</span>
                         </li>
@@ -515,22 +515,22 @@
                     </div>
                     <div class="resources mt-3">
                         <li class="list-unstyled mt-2">
-                            <a class="f-12 f-bold" href='/'>Deeper Life Bible Church, Gbagaba</a>
+                            <a class="f-12 f-bold" href=''>Deeper Life Bible Church, Gbagaba</a>
                         </li>
                         <li class="list-unstyled mt-2">
-                            <a class="f-14 f-med" href='/'>Deeper Life Bible Church, Gbagaba</a>
+                            <a class="f-14 f-med" href=''>Deeper Life Bible Church, Gbagaba</a>
                         </li>
                         <li class="list-unstyled mt-2">
-                            <a class="f-14 f-med" href='/'>Deeper Life Bible Church, Gbagaba</a>
+                            <a class="f-14 f-med" href=''>Deeper Life Bible Church, Gbagaba</a>
                         </li>
                         <li class="list-unstyled mt-2">
-                            <a class="f-14 f-med" href='/'>Deeper Life Bible Church, Gbagaba</a>
+                            <a class="f-14 f-med" href=''>Deeper Life Bible Church, Gbagaba</a>
                         </li>
                         <li class="list-unstyled mt-2">
-                            <a class="f-14 f-med" href='/'>Deeper Life Bible Church, Gbagaba</a>
+                            <a class="f-14 f-med" href=''>Deeper Life Bible Church, Gbagaba</a>
                         </li>
                         <li class="list-unstyled mt-2">
-                            <a class="f-14 f-med" href='/'>Deeper Life Bible Church, Gbagaba</a>
+                            <a class="f-14 f-med" href=''>Deeper Life Bible Church, Gbagaba</a>
                         </li>
                         <li class="list-unstyled mt-2"><button class="btn add-btn c-brand f-bold "><i class="fa fa-plus mr-2"></i>Add branch</button></li>
                     </div>
