--- a/group.html
+++ b/group.html
@@ -81,90 +81,56 @@
               </div>
             </nav>
         </header>
-        <main class="mt-5 mb-6e">
-          <div class="floating__nav">
-            <div class="container mb-5">
-              <div class="v__nav">
-                <ol class=' bg-white f-14 f-bold list-unstyled mt-3'>
-                    <li class="v__nav-list"><a href="index.html" class="f-bold v__nav-item">Believer's Fellowship / Network</a></li>
-                    <li class="v__nav-list"><a href="index.html" class="f-bold v__nav-item active c-brand">Church Organization Platform</a></li>
-                    <li class="v__nav-list"><a href="index.html" class="f-bold v__nav-item">Biblical Search / Devotional</a></li>
-                    <li class="v__nav-list"><a href="index.html" class="f-bold v__nav-item">Online Store</a></li>
-                    <li class="v__nav-list"><a href="index.html" class="f-bold v__nav-item">Directry/Event Locator</a></li>
-                    <li class="v__nav-list"><a href="index.html" class="f-bold v__nav-item">Welfare</a></li>
-                </ol>
+        <main class=" mb-6e">
+          <div class="nav__bg pt-5">
+            <div class="floating__nav">
+              <div class="container mb-5">
+                <div class="v__nav">
+                  <ol class=' bg-white f-14 f-bold list-unstyled mt-3'>
+                      <li class="v__nav-list"><a href="index.html" class="f-bold v__nav-item">Believer's Fellowship / Network</a></li>
+                      <li class="v__nav-list"><a href="index.html" class="f-bold v__nav-item active c-brand">Church Organization Platform</a></li>
+                      <li class="v__nav-list"><a href="index.html" class="f-bold v__nav-item">Biblical Search / Devotional</a></li>
+                      <li class="v__nav-list"><a href="index.html" class="f-bold v__nav-item">Online Store</a></li>
+                      <li class="v__nav-list"><a href="index.html" class="f-bold v__nav-item">Directry/Event Locator</a></li>
+                      <li class="v__nav-list"><a href="index.html" class="f-bold v__nav-item">Welfare</a></li>
+                  </ol>
+              </div>
+                <div class="row justify-content-center mt-5">
+                  <div class="col-md-8 text-center text-white">
+                    <h3 class="f-bold f-24">Customize Your Group</h3>
+                    <p class="f-16">
+                      Frontier for growth in the development of the local expertise in the subsea
+                      oil & gas industry and that Bisktrode will play a key role in the progress of this venture
+                    </p>
+                    <button type="button" class="btn bg-red text-white f-bold">Change Photo</button>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
+          <!-- BANNER -->
+          <div class="banner">
+              <div class="container">
+                  <div class="row justify-content-between">
+                      <div class="col-12 col-md-4 pos-rel pt-3">
+                          <h4 class="f-18 f-med">Group Title <span class="c-blue f-12 f-bold">(Secret Group)</span></h4>
+                      </div>
+                      <div class="col-12 col-md-6 text-right">
+                          <button class="btn btn-brand btn-brand-lg text-white f-bold btn-md" data-toggle="modal" data-target="#topic">Create Topic</button>
+                          <button class="btn bd-blue c-blue f-bold btn-md">Joined <i class="fas fa-caret-down c-blue"></i></button>
+                      </div>
+                  </div>
+              </div>
+          </div>
+
           <div class="container mt-3">
             <div class="row justify-content-center">
               <div class="col-md-3">
-                <!-- user details -->
-                <div class="user-section">
-                  <div class="user-block"></div>
-                    <img src="assets/images/user_1.png" class="img-fluid" alt='user big' />
-                    <div class="user-details text-center">
-                        <p class="f-14 f-bold c-blk">Akintunde Williams</p>
-                        <p class="f-12 f-med c-grey">Administrative officer for Deeper Life <br /> Bible Church</p>
-                    </div>
-                  </div>
-
                 <div class="resources-section p-3 mt-3 bg-white">
-                    <h3 class="f-18 c-dark">Resources</h3>
-                    <input class="form-control" placeholder="search" />
-                    <p class="f-12 c-grey f-med">Search by state, area, name...</p>
-                    <div class="resources mt-3 bg-white">
-                        <li class="list-unstyled mt-2">
-                            <a class="f-16 f-med" href=''>Messages (video)</a>
-                            <br />
-                            <span class="c-grey f-12 f-med">250 different types</span>
-                        </li>
-                        <li class="list-unstyled mt-2">
-                            <a class="f-16 f-med" href=''>Messages (video)</a>
-                            <br />
-                            <span class="c-grey f-12 f-med">250 different types</span>
-                        </li>
-                        <li class="list-unstyled mt-2">
-                            <a class="f-16 f-med" href=''>Messages (video)</a>
-                            <br />
-                            <span class="c-grey f-12 f-med">250 different types</span>
-                        </li>
-                        <li class="list-unstyled mt-2">
-                            <a class="f-16 f-med" href=''>Messages (video)</a>
-                            <br />
-                            <span class="c-grey f-12 f-med">250 different types</span>
-                        </li>
-                        <li class="list-unstyled mt-2">
-                            <a class="f-16 f-med" href=''>Messages (video)</a>
-                            <br />
-                            <span class="c-grey f-12 f-med">250 different types</span>
-                        </li>
-                        <li class="list-unstyled mt-2">
-                            <a class="f-16 f-med" href=''>Messages (video)</a>
-                            <br />
-                            <span class="c-grey f-12 f-med">250 different types</span>
-                        </li>
-                        <li class="list-unstyled mt-2">
-                            <a class="f-16 f-med" href=''>Messages (video)</a>
-                            <br />
-                            <span class="c-grey f-12 f-med">250 different types</span>
-                        </li>
-                        <li class="list-unstyled mt-2">
-                            <a class="f-16 f-med" href=''>Messages (video)</a>
-                            <br />
-                            <span class="c-grey f-12 f-med">250 different types</span>
-                        </li>
-                        <li class="list-unstyled mt-2">
-                            <a class="f-16 f-med" href=''>Messages (video)</a>
-                            <br />
-                            <span class="c-grey f-12 f-med">250 different types</span>
-                        </li>
-                        <li class="list-unstyled mt-2">
-                            <a class="f-16 f-med" href=''>Messages (video)</a>
-                            <br />
-                            <span class="c-grey f-12 f-med">250 different types</span>
-                        </li>
-                    </div>
+                    <input class="form-control bg-grey-light" placeholder="Search group..." />
+                    <p class="mb-0 f-med mt-2"><a href="" class="c-brand f-med f-14">About</a></p>
+                    <p class=" mb-0"><a href="" class="c-brand f-med f-14">Discussion</a></p>
+                    <p class=""><a href="" class="c-brand f-med f-14">Events</a></p>
                 </div>
               </div>
               <div class="col-md-6">
@@ -176,7 +142,7 @@
                                 <input type="text" class="create-post-input f-14 f-bold" placeholder='Create a post...' />
                                 <div class="uploads mt-3">
                                     <input type="file" class="upload-input" />
-                                    <button class="btn add-btn c-brand f-bold btn-md-block "><i class="fa fa-image mr-2"></i>Add branch</button>
+                                    <button class="btn add-btn c-brand f-bold btn-md-block "><i class="fa fa-image mr-2"></i>images / videos</button>
                                     <button class="btn add-btn c-brand f-bold ml-3">
                                         <i class="fa fa-tag c-brand mr-1"></i>
                                         Tag Members
@@ -470,38 +436,29 @@
               </div>
               <div class="col-md-3">
                 <section class="sidebar__right">
-                  <!-- CHURCH DETAILS -->
-                  <div class="text-center bg-white p-3">
-                    <img src="assets/images/church_logo.png" class="img-fluid" alt="church logo" />
-                    <p class="f-16 f-bold c-brand">Deeper Life Bible Church</p>
-                  </div>
-                  <!-- CHURCH BRANCHES -->
+
+                  <!-- CHURCH MEMBERS -->
                   <div class="mt-3 p-3 bg-white">
                     <div>
-                      <h3 class="f-18 f-bold c-dark">Branches</h3>
-                      <input class="form-control" placeholder="search" />
-                      <p class="f-12 c-grey f-med">Search by state, area, name...</p>
+                      <h3 class="f-18 f-bold c-dark">MEMBERS</h3>
+                      <input class="form-control bg-grey-light" placeholder="Search member" />
                     </div>
                     <div class="resources mt-3">
                         <li class="list-unstyled mt-2">
-                            <a class="f-12 f-bold" href=''>Deeper Life Bible Church, Gbagaba</a>
+                            <a class="f-14 f-bold" href=''>Adebowale Johnson </a>
                         </li>
                         <li class="list-unstyled mt-2">
-                            <a class="f-14 f-med" href=''>Deeper Life Bible Church, Gbagaba</a>
+                            <a class="f-14 f-bold" href=''>Adebowale Johnson </a>
                         </li>
                         <li class="list-unstyled mt-2">
-                            <a class="f-14 f-med" href=''>Deeper Life Bible Church, Gbagaba</a>
+                            <a class="f-14 f-bold" href=''>Adebowale Johnson </a>
                         </li>
                         <li class="list-unstyled mt-2">
-                            <a class="f-14 f-med" href=''>Deeper Life Bible Church, Gbagaba</a>
+                            <a class="f-14 f-bold" href=''>Adebowale Johnson </a>
                         </li>
-                        <li class="list-unstyled mt-2">
-                            <a class="f-14 f-med" href=''>Deeper Life Bible Church, Gbagaba</a>
-                        </li>
-                        <li class="list-unstyled mt-2">
-                            <a class="f-14 f-med" href=''>Deeper Life Bible Church, Gbagaba</a>
-                        </li>
-                        <li class="list-unstyled mt-2"><button class="btn add-btn c-brand f-bold "><i class="fa fa-plus mr-2"></i>Add branch</button></li>
+
+
+                        <li class="list-unstyled mt-2"><button class="btn add-btn c-brand f-bold "><i class="fa fa-plus mr-2"></i>Add member</button></li>
                     </div>
                   </div>
                 </section>
@@ -510,7 +467,39 @@
             </div>
           </div>
 
+          <div class="modal fade" id="topic" tabindex="-1" role="dialog" aria-labelledby="createTopicModal"
+            aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content rounded">
+                <div class="modal-header bg-grey-light">
+                  <h4 class="modal-title pl-2 f-bold" id="createTopicModal">
+                    Create a Topic
+                  </h4>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <form action="">
+                    <div class="form-group">
+                      <label for="name" class="f-bold">Name your Topic</label>
+                      <input type="text" id="name" name="name" class="form-control" placeholder="Enter the name of your group" required>
+                    </div>
+
+                  </form>
+                </div>
+                <div class="modal-footer text-right bg-grey-light">
+                    <button class="btn btn-brand text-white btn-md">Create</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </main>
+
+
+        <!-- modal -->
+
 
         <!-- JQuery -->
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
