--- a/user_onboarding2.html
+++ b/user_onboarding2.html
@@ -14,6 +14,7 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
         <!-- Material Design Bootstrap -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.9/css/mdb.min.css" rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.10/css/select2.min.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./assets/css/main.css">
         <link rel="stylesheet" href="./assets/css/style.css">
@@ -47,7 +48,7 @@
                             <p></p>
                         </div>
                         <div class="form-group mt-5">
-                          <select type="text" class="form-control v__input" placeholder="Headquarters Address" required >
+                          <select type="text" class="form-control search-select v__input " placeholder="Headquarters Address" required >
                             <option>Select your Branch</option>
                             <option value="">Egbe</option>
                             <option value="">Bode Thomas</option>
@@ -99,5 +100,11 @@
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
         <!-- MDB core JavaScript -->
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.9/js/mdb.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.10/js/select2.min.js"></script>
+        <script type="text/javascript">
+          $(document).ready(function() {
+            $('.search-select').select2();
+          });
+        </script>
     </body>
 </html>
