--- a/index.html
+++ b/index.html
@@ -18,123 +18,234 @@
         <link rel="stylesheet" href="./assets/css/main.css">
         <link rel="stylesheet" href="./assets/css/style.css">
     </head>
-    <body data-page="homepage">
+    <body data-page="first-page">
         <header>
             <div class="container-fluid">
               <nav class="navbar navbar-expand-lg nav-bs">
                   <a class="navbar-brand" href="index.html">
                       <img src="./assets/images/s4.png" alt="logo">
                   </a>
-                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
+                  <button class="navbar-toggler border bd-blue" type="button" data-toggle="collapse" data-target="#basicExampleNav"
                       aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
+                      <span class="fas fa-bars c-blue"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="basicExampleNav">
                       <ul class="navbar-nav ml-auto">
-                          <li class="nav-item">
-                              <a class="nav-link nav-border" href="login.html">Log In</a>
-                          </li>
-                          <li class="nav-item">
-                              <a class="nav-link" href="register.html">Sign Up</a>
-                          </li>
+                        <li class="nav-item">
+                          <a href="#about" class="nav-link">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                          <a href="#features" class="nav-link ">Features</a>
+                        </li>
+                        <li class="nav-item mt-3">
+                          <a href="landing.html" class="btn btn-brand btn-brand-lg f-bold text-white">Get Started</a>
+                        </li>
                       </ul>
                   </div>
               </nav>
             </div>
 
         </header>
-        <main class="mt-6e mb-6e">
-          <div class="intro">
-              <h3 class="f-20 c-red text-center f-bold">Verity Christian Faith Ministry</h3>
-              <h2 class="mt-3 f-52 f-bold c-brand text-center">
-                  A Social & Communication <br />
-                  Platform For The Christian Faith
-              </h2>
-              <p class="c-brand f-20 text-center">
-                  To make a donation to the welfare to help those in need
-                  <a hre="onboarding.html">
-                      <i class="fa fa-long-arrow-right c-red ml-3"></i>
-                  </a>
-              </p>
+        <main class="mt-6 mb-6e">
+          <div class="body-bg">
+            <section class="intro pt-6e">
+                <h3 class="f-20 c-red text-center f-bold">Verity Christian Faith Ministry</h3>
+                <h2 class="mt-3 f-52 f-bold c-brand text-center">
+                    A Social & Communication <br />
+                    Platform For The Christian Faith
+                </h2>
+                <!-- <p class="c-brand f-20 text-center">
+                  <span class="f-bold">VERITY CHRISTIAN FAITH MINISTRIES</span> <br> is <br>
+                  an online social, administrative, welfare and communication platform for the Christian Faith.
+                </p> -->
+                <p class="c-brand f-20 text-center">
+                  <a href="landing.html" class="btn btn-brand text-white btn-brand-lg mt-5">GET STARTED</a>
+                </p>
+            </section>
           </div>
-          <div class="info text-center mt-6e">
-            <div class="square-container">
-                <div class="square">
-                  <span>Belivers’ Fellowship Platform/Network</span>
-                </div>
-              </div>
-              <div class="square-container">
-                <div class="square" data-toggle="modal" data-target="#platformModal">
-                  <span>Church Organisation Platform</span>
-                </div>
-              </div>
-              <div class="square-container">
-                <div class="square">
-                  <span>Biblical Research (Search Engine)</span>
-                </div>
-              </div>
-              <div class="square-container">
-                <div class="square">
-                  <span>Registry Directory Event Locator</span>
-                </div>
-            </div>
-            <div class="mt-4">
-              <div class="square-container">
-                  <div class="square">
-                    <span> Welfare</span>
-                  </div>
-              </div>
-              <div class="square-container">
-                  <div class="square">
-                    <span>Devotional Online Store</span>
-                  </div>
-              </div>
-            </div>
-          </div>
-        </main>
-        <!-- all modals -->
-        <!-- Modal -->
-        <div class="modal fade" id="platformModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-          aria-hidden="true">
-          <div class="modal-dialog w-80" role="document">
-            <div class="modal-content">
-              <div class="modal-header border-none py-0">
-                <!-- <h5 class="modal-title" id="exampleModalLabel">Choose a denomination</h5> -->
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body">
-                <div class="heading">
-                  <h3 class="text-center f-bold f-24 c-brand">Welcome to the church organization Platform</h3>
-                  <p class="text-center c-brown f-20 mt-3">Please select a platform for you to enter</p>
-                </div>
-                <form action="user_onboarding.html" class="text-center">
-                    <div class="form-group mt-5">
-                        <div class="form-check form-check-inline mr-5e">
-                            <input class="form-check-input " type="radio" name="inlineRadioOptions"
-                              id="individual" value="individual" required />
-                            <label class="form-check-label f-16 f-med" htmlFor="individual">Individual</label>
-                        </div>
-                        <div class="form-check form-check-inline mr-5e">
-                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="denomination" value="denomination" />
-                            <label class="form-check-label f-16 c-red f-med" htmlFor="denomination">Denomination</label>
-                        </div>
-                        <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="forum" value="forum" required />
-                            <label class="form-check-label f-16 f-med" htmlFor="forum">Forum</label>
-                        </div>
-                    </div>
-                    <div class="form-group mt-5 text-center">
-                        <button type='submit' class="btn btn-brand text-white" data-toggle="modal" data-target="denominationModal">Select</button>
-                    </div>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
 
-        
+          <section class="about bg-white py-5 px-sm-3" id="about">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-12">
+                  <h1 class="f-abril f-40">About Us</h1>
+                  <p class="mt-4 f-18">
+                    <span class="f-bold">VERITY CHRISTIAN FAITH MINISTRY</span> is an organization of likeminded individuals
+                    and groups, who have firmly and solely resolved to unite together resources, efforts,
+                    skills etc for the collective growth of the Christian faith, unflinching support for the
+                    teaching of true doctrine, and for the practice and fellowship of Christianity, to
+                    individuals, groups, institutions, the society, and humanity at large, with the goal of
+                    promotion and perfection of Christian faith, to the glory of God and to the blessing of
+                    humanity.
+                  </p>
+                  <p class="f-18">
+                    It is our firm belief and conviction that through this platform, where likeminded
+                    individuals, groups, institutions can band together and jointly harmonize resources,
+                    we can unite for the propagation of the true teachings and practices of Christian faith
+                    and belief, as taught, exemplified, practiced and directed in the scriptures.
+                  </p>
+
+                  <section class="vision mt-5">
+                    <h3 class="f-abril">VISION</h3>
+                    <p>
+                      To be an organisation of high standing for the promotion, support, and perfection of
+                      Christian faith, in doctrine, fellowship and all faith related works, to the glory of God
+                      and the blessing of humanity.
+                    </p>
+
+                    <h3 class="f-abril mt-5">MISSION</h3>
+                    <p>
+                      To serve as a strong platform which provides advocacy, consultancy, Information
+                      Technology services, amongst others, to contribute, encourage, and promote the
+                      growth of fellowship, unity and perfection of the Christian faith globally.
+                    </p>
+                  </section>
+                  <section class="objectives mt-5">
+                    <h3 class="f-abril">OBJECTIVES</h3>
+                    <ol class="f-16 mt-5">
+                      <li>
+                        A platform to aid the ministers and pastors in basic administration duties and
+                        activities of the church and their members.
+                      </li>
+                      <li>
+                        A platform for evangelism and proclamation of the truth and teachings of the Bible.
+                      </li>
+                      <li>
+                        A platform for speedy dissemination of information across all branches of the
+                        Church(es), a unit Church or congregation and its members.
+                      </li>
+                      <li>
+                        A platform for the welfare of members and individuals, hence promoting
+                        fellowship, love and brotherly kindness.
+                      </li>
+                      <li>
+                        A platform to keep track of the spread of churches, congregations,
+                        denominations and Christianity in the world or in any geographical location,
+                        and reach of the gospel in the world.
+                      </li>
+                    </ol>
+                  </section>
+                </div>
+              </div>
+            </div>
+          </section>
+
+          <section class="mt-5 px-sm-3" id="features">
+            <div class="container">
+              <div class="row justify-content-center">
+                <div class="col-md-12">
+                  <h1 class="f-40 f-abril">FEATURES</h1>
+                  <p class="f-med f-24">
+                     VERITY offers the following services/features to individuals and churches:
+                  </p>
+                  <ol class="c-brand mt-5">
+                    <div class="row">
+                      <div class="col-md-6">
+                        <li>Church Administration</li>
+                        <li>Social Media Network</li>
+                        <li class="f-16">
+                          Registry & Events creation,sharing, locating and tracking
+                          (for members, churches and congregations)
+                        </li>
+                      </div>
+                      <div class="col-md-6">
+                        <li>Devotionals/Online store</li>
+                        <li>
+                          Bible Research & Study (Topics, materials, discussions etc)
+                        </li>
+                        <li>
+                          Welfare Ministry (www.helpingalms.com)
+                        </li>
+                      </div>
+                    </div>
+                  </ol>
+                </div>
+              </div>
+            </div>
+            <section class="features mt-6e px-sm-3">
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-8 card bg-white-light py-5">
+                    <h1 class="f-52 f-abril">01 <span class=" text-capitalize f-quick">Church Administration</span></h1>
+                    <p class="f-16">
+                      This is a Church management solution for effective management of membership data, member communication, church-to-member
+                      communication, events creation, sharing and tracking, attendance and reports collection and keeping, centralized church
+                      data for easy access and storage.
+                    </p>
+                  </div>
+                </div>
+                <div class="row mt-5">
+                  <div class="col-md-4"></div>
+                  <div class="col-md-8 card bg-white-light py-5">
+                    <h1 class="f-52 f-abril">02 <span class=" text-capitalize f-quick">Social Media Network</span></h1>
+                    <p class="f-16">
+                      A platform for social interaction amongst members, with the Church, and connecting with Christians within your
+                      vicinity, and Christians beyond.
+                    </p>
+                  </div>
+                </div>
+                <div class="row mt-5">
+                  <div class="col-md-8 card bg-white-light py-5">
+                    <h1 class="f-52 f-abril">03
+                       <span class=" text-capitalize f-quick">
+                         Registry & Events-sharing
+                          <!-- (for members and congregations) (locating and tracking) -->
+                       </span>
+                     </h1>
+                    <p class="f-16">
+                      A registry of all Churches locally and globally, their addresses, directions,
+                      contact persons to reach in cases of emergencies, and brief information of the
+                      congregation, its membership, and the ministries etcetera, with events
+                      creation, sharing and tracking is possible, timely delivery of invitations to
+                      events for churches, branches and members.
+                    </p>
+                  </div>
+                </div>
+                <div class="row mt-5">
+                  <div class="col-md-4"></div>
+                  <div class="col-md-8 card bg-white-light py-5">
+                    <h1 class="f-52 f-abril">04 <span class=" text-capitalize f-quick">Devotionals/Online store</span></h1>
+                    <p class="f-16">
+                      A platform for social interaction amongst members, with the Church, and connecting with Christians within your
+                      vicinity, and Christians beyond.
+                    </p>
+                  </div>
+                </div>
+                <div class="row mt-5">
+                  <div class="col-md-8 card bg-white-light py-5">
+                    <h1 class="f-52 f-abril">05
+                       <span class=" text-capitalize f-quick">
+                         Biblical Research & Study
+                       </span>
+                     </h1>
+                    <p class="f-16">
+                      A search engine, encyclopaedia and research website for research and
+                      Bible-based answers on biblical questions, biblical knowledge and information
+                      from scholars.
+                    </p>
+                  </div>
+                </div>
+                <div class="row mt-5">
+                  <div class="col-md-4"></div>
+                  <div class="col-md-8 card bg-white-light py-5">
+                    <h1 class="f-52 f-abril">06 <span class=" text-capitalize f-quick">Welfare ministry</span></h1>
+                    <p class="f-16">
+                      An online platform where fellowship and love can be encouraged as Christians
+                      have the opportunity to join hands in granting the request/wish of another,
+                      contribute to a good cause, empathise with a brother/sister in their difficulty
+                      and render aid, contribute to a project etcetera.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </section>
+          </section>
+
+
+        </main>
+
+
+
         <footer class="footer bd-t-red">
           <div class="container-fluid">
             <div class="row justify-content-between">
