--- a/branch.html
+++ b/branch.html
@@ -87,12 +87,12 @@
               <div class="container mb-5">
                 <div class="v__nav">
                   <ol class=' bg-white f-14 f-bold list-unstyled mt-3'>
-                      <li class="v__nav-list"><a href="index.html" class="f-bold v__nav-item">Believer's Fellowship / Network</a></li>
-                      <li class="v__nav-list"><a href="index.html" class="f-bold v__nav-item active c-brand">Church Organization Platform</a></li>
-                      <li class="v__nav-list"><a href="index.html" class="f-bold v__nav-item">Biblical Search / Devotional</a></li>
-                      <li class="v__nav-list"><a href="index.html" class="f-bold v__nav-item">Online Store</a></li>
-                      <li class="v__nav-list"><a href="index.html" class="f-bold v__nav-item">Directry/Event Locator</a></li>
-                      <li class="v__nav-list"><a href="index.html" class="f-bold v__nav-item">Welfare</a></li>
+                      <li class="v__nav-list"><a href="network.html" class="f-bold v__nav-item">Believer's Fellowship / Network</a></li>
+                      <li class="v__nav-list"><a href="group.html" class="f-bold v__nav-item active c-brand">Church Organization Platform</a></li>
+                      <li class="v__nav-list"><a href="denomination.html" class="f-bold v__nav-item">Biblical Search / Devotional</a></li>
+                      <li class="v__nav-list"><a href="" class="f-bold v__nav-item">Online Store</a></li>
+                      <li class="v__nav-list"><a href="" class="f-bold v__nav-item">Directry/Event Locator</a></li>
+                      <li class="v__nav-list"><a href="welfare.html" class="f-bold v__nav-item">Welfare</a></li>
                   </ol>
                 </div>
               </div>
