--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                   <p class="f-med f-24">
                      VERITY offers the following services/features to individuals and churches:
                   </p>
-                  <ol class="c-brand mt-5">
+                  <ol class="list-lg c-brand mt-5">
                     <div class="row">
                       <div class="col-md-6">
                         <li>Church Administration</li>
