--- a/denomination.html
+++ b/denomination.html
@@ -86,12 +86,12 @@
               <div class="container mb-5">
                 <div class="v__nav">
                   <ol class=' bg-white f-14 f-bold list-unstyled mt-3'>
-                      <li class="v__nav-list"><a href="index.html" class="f-bold v__nav-item ">Believer's Fellowship / Network</a></li>
-                      <li class="v__nav-list"><a href="index.html" class="f-bold v__nav-item ">Church Organization Platform</a></li>
-                      <li class="v__nav-list"><a href="index.html" class="f-bold v__nav-item active">Biblical Search / Devotional</a></li>
-                      <li class="v__nav-list"><a href="index.html" class="f-bold v__nav-item">Online Store</a></li>
-                      <li class="v__nav-list"><a href="index.html" class="f-bold v__nav-item">Directry/Event Locator</a></li>
-                      <li class="v__nav-list"><a href="index.html" class="f-bold v__nav-item">Welfare</a></li>
+                      <li class="v__nav-list"><a href="network.html" class="f-bold v__nav-item ">Believer's Fellowship / Network</a></li>
+                      <li class="v__nav-list"><a href="group.html" class="f-bold v__nav-item ">Church Organization Platform</a></li>
+                      <li class="v__nav-list"><a href="denomination.html" class="f-bold v__nav-item active">Biblical Search / Devotional</a></li>
+                      <li class="v__nav-list"><a href="" class="f-bold v__nav-item">Online Store</a></li>
+                      <li class="v__nav-list"><a href="" class="f-bold v__nav-item">Directry/Event Locator</a></li>
+                      <li class="v__nav-list"><a href="welfare.html" class="f-bold v__nav-item">Welfare</a></li>
                   </ol>
                 </div>
               </div>
@@ -105,7 +105,7 @@
                       <input type="search" class="form-control bg-grey-light" placeholder="Search by topic or title">
                     </div>
                     <div class="col-md-2"></div>
-                    <div class="col-md-4">
+                    <div class="col-md-6">
                       <ul class="nav nav-tabs denomination__tab nav-fill bg-white " >
                         <li class="nav-item mb-0" >
                           <a class="nav-link active" role="tablist"  id="biblesearch-tab" data-toggle="tab" href="#biblesearch"
@@ -119,11 +119,13 @@
                             <span class="nav__link-active"></span>
                           </a>
                         </li>
+                        <li class="nav-item mb-0">
+                          <a class=" btn btn-brand text-white btn-brand-lg"  role="tablist"  id="" data-toggle="modal"  data-target="#addContentModal"
+                            role="tab" aria-controls="" aria-selected="true">Add Content
+                          </a>
+                        </li>
 
                       </ul>
-                    </div>
-                    <div class="col-md-2">
-                      <button class="btn btn-brand text-white btn-brand-lg" data-toggle="modal" data-target="#addContentModal">Add Content</button>
                     </div>
                   </div>
                 </div>
@@ -356,54 +358,39 @@
                   </div>
                   <div class="form-group mt-4">
                     <label for="topic" class="f-bold">Select Topic</label>
-                    <select name="topic" id="" class="form-control">
-                      <option value=""></option>
-                      <option value=""></option>
-                      <option value=""></option>
+                    <select name="topic" id="topic" class="form-control">
+                      <option value="">Prayer</option>
+                      <option value="">Sunday School</option>
+                      <option value="">Fellowship</option>
                     </select>
                   </div>
-                  <div class="form-group mt-4">
-                    <label for="files-upload" class="f-bold c-brand upload"></label>
-                    <input type="text" id="files-upload" name="files-upload" class="form-control upload__files-input" required>
+                  <div class="form-group mt-4 pos-rel">
+                    <label for="files" class="f-bold c-grey upload">
+                      <i class="fas fa-cloud c-brand fa-2x mb-2"></i>
+                      <br>
+                      Drag and Drop files here <br> or <span class="c-brand f-bold mt-2">Browse</span>
+                    </label>
+                    <input type="file" id="files" name="files" class="form-control upload__files-input" required>
                   </div>
                   <div class="form-group row mt-4">
-                    <div class="col-md-8">
-                      <label for="" class="f-bold">Select Privacy</label>
-                      <!-- Default unchecked -->
-                      <div class="custom-control custom-radio">
-                        <input type="radio" class="custom-control-input" id="privacy" name="privacy">
-                        <label class="custom-control-label" for="privacy">Secret
-                          <span class="c-grey"> ( Enter group description, Rules and Regulations... )</span>
-                        </label>
-                      </div>
-                      <div class="custom-control custom-radio">
-                        <input type="radio" class="custom-control-input" id="privacy" name="privacy">
-                        <label class="custom-control-label" for="privacy">Private
-                          <span class="c-grey">( Enter group description, Rules and Regulations... ) </span>
-                        </label>
-                      </div>
-                      <div class="custom-control custom-radio">
-                        <input type="radio" class="custom-control-input" id="privacy" name="privacy" checked>
-                        <label class="custom-control-label" for="privacy">Public
-                          <span class="c-grey">( Enter group description, Rules and Regulations... ) </span>
-                        </label>
-                      </div>
+                    <div class="col-md-6">
+                      <button class="btn c-brand no-bs ">
+                        <i class="fas fa-image"></i>
+                        Add Image / Video
+                      </button>
                     </div>
-                    <div class="col-md-4 text-center">
-                      <label for="" class="f-bold mb-5">Upload Image</label>
-                      <div class="pos-rel">
-                        <label for="group-image" class="upload_group_image py-3">
-                          <img src="assets/images/camera.png" alt="">
-                        </label>
-                        <input type="file" id="group-image" name="group-image" class="group__hidden">
-                      </div>
-
+                    <div class="col-md-6">
+                      <button class="btn c-brand no-bs ">
+                          <i class="fas fa-angle-left"></i>
+                          <i class="fas fa-angle-right pr-2"></i>
+                        Add an embed
+                      </button>
                     </div>
                   </div>
                 </form>
               </div>
               <div class="modal-footer text-right bg-grey-light">
-                  <button class="btn btn-brand text-white btn-md">Create</button>
+                  <button class="btn btn-brand text-white btn-md">Publish</button>
               </div>
             </div>
           </div>
