add updates to landing page

--- a/index.html
+++ b/index.html
@@ -46,23 +46,77 @@
             </div>
 
         </header>
-        <main class="mt-6 mb-6e">
-          <div class="body-bg">
-            <section class="intro pt-6e">
-                <h3 class="f-20 c-red text-center f-bold">Verity Christian Faith Ministry</h3>
-                <h2 class="mt-3 f-52 f-bold c-brand text-center">
-                    A Social & Communication <br />
-                    Platform For The Christian Faith
-                </h2>
-                <!-- <p class="c-brand f-20 text-center">
-                  <span class="f-bold">VERITY CHRISTIAN FAITH MINISTRIES</span> <br> is <br>
-                  an online social, administrative, welfare and communication platform for the Christian Faith.
-                </p> -->
+        <main class="mb-6e">
+          <!--Carousel Wrapper-->
+          <div id="carousel-example-2" class="carousel slide carousel-fade" data-ride="carousel">
+            <!--Indicators-->
+            <ol class="carousel-indicators">
+              <li data-target="#carousel-example-2" data-slide-to="0" class="active"></li>
+              <li data-target="#carousel-example-2" data-slide-to="1"></li>
+              <li data-target="#carousel-example-2" data-slide-to="2"></li>
+            </ol>
+            <!--/.Indicators-->
+            <!--Slides-->
+            <div class="carousel-inner" role="listbox">
+              <div class="carousel-item active">
+                <div class="view">
+                  <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(68).jpg"
+                    alt="First slide">
+                  <div class="mask rgba-black-light"></div>
+                </div>
+                <div class="carousel-caption">
+                  <h3 class="h3-responsive">
+                    A Social & Communication Platform </h3>
+                  <p>Extra text text</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <!--Mask color-->
+                <div class="view">
+                  <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(6).jpg"
+                    alt="Second slide">
+                  <div class="mask rgba-black-strong"></div>
+                </div>
+                <div class="carousel-caption">
+                  <h3 class="h3-responsive">
+                    A Social & Communication Platform </h3>
+                  <p>Extra text text</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <!--Mask color-->
+                <div class="view">
+                  <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(9).jpg"
+                    alt="Third slide">
+                  <div class="mask rgba-black-slight"></div>
+                </div>
+                <div class="carousel-caption">
+                  <h3 class="h3-responsive">
+                    A Social & Communication Platform </h3>
+                  <p>Extra text text</p>
+                </div>
+              </div>
+            </div>
+            <!--/.Slides-->
+            <!--Controls-->
+            <a class="carousel-control-prev" href="#carousel-example-2" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carousel-example-2" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+            <!--/.Controls-->
+          </div>
+          <!--/.Carousel Wrapper-->
+
+            <section class="intro " id="get_started">
                 <p class="c-brand f-20 text-center">
                   <a href="landing.html" class="btn btn-brand text-white btn-brand-lg mt-5">GET STARTED</a>
                 </p>
             </section>
-          </div>
+
 
           <section class="about bg-white py-5 px-sm-3" id="about">
             <div class="container">
