Add comment section

--- a/dashboard.html
+++ b/dashboard.html
@@ -235,11 +235,12 @@
                                 </div>
                             </div>
                             <div class="comments hide mt-5">
-                                <div class="partial-comments" id="partial_comments">
+                                <div class="partial-comments scrollbar scrollbar-teal" id="partial_comments">
+                                    <div class="forc-overflow"></div>
                                     <div class="media">
                                         <img class="d-flex mr-3" src="assets/images/user_3.png" alt="Generic placeholder image">
-                                        <div class="media-body f-12">
-                                            <h5 class="mt-0 font-weight-bold f-13">Adekunle Ayo</h5>
+                                        <div class="media-body f-12 f-med">
+                                            <h5 class="mt-0 font-weight-bold c-brand f-13">Adekunle Ayo</h5>
                                             Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
                                             vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia
                                             congue felis in faucibus.
@@ -248,8 +249,8 @@
                                                 <a class="d-flex pr-3" href="#">
                                                     <img src="assets/images/user_3.png" alt="Generic placeholder image">
                                                 </a>
-                                                <div class="media-body f-12">
-                                                    <h5 class="mt-0 font-weight-bold f-13">Tobi Smith</h5>
+                                                <div class="media-body f-12 f-med">
+                                                    <h5 class="mt-0 font-weight-bold c-brand f-13">Tobi Smith</h5>
                                                     Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
                                                     vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia
                                                     congue felis in faucibus.
@@ -259,8 +260,8 @@
                                     </div>
                                     <div class="media mt-4">
                                         <img class="d-flex mr-3" src="assets/images/user_3.png" alt="Generic placeholder image">
-                                        <div class="media-body f-12">
-                                            <h5 class="mt-0 font-weight-bold f-13">Adekunle Ayo</h5>
+                                        <div class="media-body f-12 f-med">
+                                            <h5 class="mt-0 font-weight-bold c-brand f-13">Adekunle Ayo</h5>
                                             Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
                                             vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia
                                             congue felis in faucibus.
@@ -269,8 +270,8 @@
                                                 <a class="d-flex pr-3" href="#">
                                                     <img src="assets/images/user_3.png" alt="Generic placeholder image">
                                                 </a>
-                                                <div class="media-body f-12">
-                                                    <h5 class="mt-0 font-weight-bold f-13">Tobi Smith</h5>
+                                                <div class="media-body f-12 f-med">
+                                                    <h5 class="mt-0 font-weight-bold c-brand f-13">Tobi Smith</h5>
                                                     Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
                                                     vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia
                                                     congue felis in faucibus.
