Add resources page

--- a/dashboard.html
+++ b/dashboard.html
@@ -111,6 +111,7 @@
 
                 <div class="resources-section p-3 mt-3 bg-white">
                     <h3 class="f-18 c-dark">Resources</h3>
+
                     <input class="form-control" placeholder="search" />
                     <p class="f-12 c-grey f-med">Search by state, area, name...</p>
                     <div class="resources mt-3 bg-white">
@@ -164,6 +165,7 @@
                             <br />
                             <span class="c-grey f-12 f-med">250 different types</span>
                         </li>
+                        <a href="resources.html" class="btn bg-brand btn-md btn-block white-text">View all Resources</a>
                     </div>
                 </div>
               </div>
@@ -244,7 +246,7 @@
                                             Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
                                             vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia
                                             congue felis in faucibus.
-                                        
+
                                             <div class="media mt-4">
                                                 <a class="d-flex pr-3" href="#">
                                                     <img src="assets/images/user_3.png" alt="Generic placeholder image">
@@ -265,7 +267,7 @@
                                             Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
                                             vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia
                                             congue felis in faucibus.
-                                        
+
                                             <div class="media mt-4">
                                                 <a class="d-flex pr-3" href="#">
                                                     <img src="assets/images/user_3.png" alt="Generic placeholder image">
