--- a/denomination.html
+++ b/denomination.html
@@ -62,7 +62,7 @@
                         </div>
                       </form>
                       <li class="nav-item dropdown">
-                        <a href="" class="nav-link dashboard-nav--dropdown  dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a href="" class="nav-link dashboard-nav--dropdown  dashboard-header  dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           <img src="./assets/images/user.png" class="user-img img-fluid" alt="user" />
                           <span class="blue-dot"></span>
                         </a>
