Add messages page

--- a/dashboard.html
+++ b/dashboard.html
@@ -41,7 +41,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="signup.html">
+                            <a class="nav-link" href="messages.html">
                               <i class="fas fa-envelope f-24 c-blue mr-1"></i>
                               <span class="c-blue font-weight-bold f-14">MESSAGES</span>
                             </a>
